--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_legality.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_legality.html
@@ -1,4 +1,5 @@
 {% extends 'base_layout.html' %}
+{% load i18n %}
 {% load static %}
 {% block title %} Bitcoin legality {% endblock %}
 {% block content %}
@@ -10,7 +11,7 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>Bitcoin Legality</h2>
+							<h2>{% trans 'Bitcoin Legality' %}</h2>
 						
 						</div>
 					</div>
@@ -23,8 +24,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-							<li class="breadcrumb-item active">Legality</li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">{% trans 'Home' %}</a></li>
+							<li class="breadcrumb-item active">{% trans 'Legality' %}</li>
 						</ol>
 					</div>
 				</div>
@@ -40,19 +41,19 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12 col-12 mb-lg-0 mb-md-0 mb-5 pr-lg-5 pr-md-5 pr-sm-2 pr-2">
 					<div class="widget cat_wid mb-5">
-						<h3 class="widget-title">Service List</h3>
+						<h3 class="widget-title">{% trans "Service List" %}</h3>
 						<!-- end widget tittle-->
 						<div class="widget-inner mt-5">
 							<div class="category-menu">
 								<ul>
-									<li><a href="{% url 'bitcoin_ethereum' %}">Bitcoin & Ethereum <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'crypto_trading' %}">Cryptocurrency Trading <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'bitcoin_trading' %}">Bitcoin Trading <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'coin_buy' %}">Coin Buy & Sell <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'security_ensure' %}">Account Security <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="#" class="active">Bitcoin Legality <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="#">Trading Strategy <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="#">Money Exchange <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'bitcoin_ethereum' %}">{% trans 'Bitcoin & Ethereum' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'crypto_trading' %}">{% trans 'Cryptocurrency Trading' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'bitcoin_trading' %}">{% trans 'Bitcoin Trading' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'coin_buy' %}">{% trans 'Coin Buy & Sell' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'security_ensure' %}">{% trans 'Account Security' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="#" class="active">{% trans 'Bitcoin Legality' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="#">{% trans 'Trading Strategy' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="#">{% trans 'Money Exchange' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -114,16 +115,16 @@
 					<!-- end image tab -->
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
-							<h4>Service Overview</h4>
-							<p>As far as The Platform Technology acts solely as an intermediary bringing together buyers and sellers nothing on the Fonixcoin platform can be ensured to contain no errors, mistakes, mispresentations or failures etc.</p>
+							<h4>{% trans 'Service Overview' %}</h4>
+							<p>{% trans "As far as The Platform Technology acts solely as an intermediary bringing together buyers and sellers nothing on the Fonixcoin platform can be ensured to contain no errors, mistakes, mispresentations or failures etc." %}</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Service Restriction -</strong> You shall not use our Services and immediately cease using those if you are a resident or become a resident at any time of the state or region, where Fonixcoin is not authorized to act.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Crypto coins and tokens Policy -</strong> Fonixcoin accepts deposits and provides withdrawals in any of the following crypto assets.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>General -</strong>Any individual (the "user"), who opens an account with Fonixcoin understands and accepts that crypto assets do not necessarily have a specific form of protection or regulation by any governmental body.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Service Restriction' %} -</strong> {% trans "You shall not use our Services and immediately cease using those if you are a resident or become a resident at any time of the state or region, where Fonixcoin is not authorized to act." %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Crypto coins and tokens Policy' %} -</strong> {% trans "Fonixcoin accepts deposits and provides withdrawals in any of the following crypto assets." %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'General' %} -</strong>{% trans 'Any individual (the "user"), who opens an account with Fonixcoin understands and accepts that crypto assets do not necessarily have a specific form of protection or regulation by any governmental body.' %}</li>
 								</ul>
 							</div>
 							<!-- end col -->
@@ -154,16 +155,16 @@
 						<div class="row">
 							<div class="col-12">
 								<ul class="nav nav-tabs" role="tablist">
-									<li class="nav-item"><a class="nav-link active" href="#" data-target="#srone" data-toggle="tab">Description</a></li>
-									<li class="nav-item"><a class="nav-link" href="#" data-target="#srtwo" data-toggle="tab">Experinece</a></li>
-									<li class="nav-item"><a class="nav-link" href="#" data-target="#srthree" data-toggle="tab">Values</a></li>
+									<li class="nav-item"><a class="nav-link active" href="#" data-target="#srone" data-toggle="tab">{% trans 'Description' %}</a></li>
+									<li class="nav-item"><a class="nav-link" href="#" data-target="#srtwo" data-toggle="tab">{% trans 'Experience' %}</a></li>
+									<li class="nav-item"><a class="nav-link" href="#" data-target="#srthree" data-toggle="tab">{% trans 'Values' %}</a></li>
 								</ul>
 								<!-- Tab panes -->
 								<div class="tab-content">
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>However, Fonixcoin reserves the right to reject any deposits and suspend withdrawals which its compliance and risk management service provider has decided to be the result of detecting of suspicious activity such as criminal activity or any other infringement of its compliance guidelines.</p>										
+												<p>{% trans "However, Fonixcoin reserves the right to reject any deposits and suspend withdrawals which its compliance and risk management service provider has decided to be the result of detecting of suspicious activity such as criminal activity or any other infringement of its compliance guidelines." %}</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
@@ -176,12 +177,12 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>“Crypto assets” shall mean such type of assets which can only and exclusively be transmitted by means of block-chain technology, including but not limited to digital coins and digital tokens and any other type of digital mediums of exchange, such as Bitcoin, Ethereum, Ripple, etc, to the full and absolute exempt of the securities of any kind.</p>										
+												<p>{% trans '“Crypto assets” shall mean such type of assets which can only and exclusively be transmitted by means of block-chain technology, including but not limited to digital coins and digital tokens and any other type of digital mediums of exchange, such as Bitcoin, Ethereum, Ripple, etc, to the full and absolute exempt of the securities of any kind.' %}</p>										
 											</div>
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3"> "Third-Party Content" is the content provided by third parties, including without limitation links to web pages of such parties, which may be represented on the Technology Platform.</p>
+										<p class="mb-3"> {% trans '"Third-Party Content" is the content provided by third parties, including without limitation links to web pages of such parties, which may be represented on the Technology Platform.' %}</p>
 									 </div>
 								</div>
 							</div>
