--- a/users/templates/registration/password_change_success.html
+++ b/users/templates/registration/password_change_success.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -7,11 +8,11 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Password
+        {% trans 'Password' %}
       </h1>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
         <li class="breadcrumb-item active"></li>
       </ol>
     </section>
@@ -22,15 +23,15 @@
      <!-- Basic Forms -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Change Password</h3>
-          <h6 class="box-subtitle">Successful</h6>
+          <h3 class="box-title">{% trans 'Change Password' %}</h3>
+          <h6 class="box-subtitle">{% trans 'Successful' %}</h6>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
           <div class="row">
             
             <div class="col">
-                <h4>Your password has been successfully updated</h4>
+                <h4>{% trans 'Your password has been successfully updated' %}</h4>
             </div>
             <!-- /.col -->
           </div>
