--- a/users/templates/registration/password_reset_complete.html
+++ b/users/templates/registration/password_reset_complete.html
@@ -1,11 +1,12 @@
 {% extends "base_layout.html" %}
+{% load i18n %}
 {% block title %}{{ block.super }}Password Reset Successful{% endblock title %}
 
 {% block content %}
 <div>
     <div class="row">
-        <p>Your password has been Reset.</p>
-        <p>Log in using your new password.</p>
+        <p>{% trans 'Your password has been Reset.' %}</p>
+        <p>{% trans 'Log in using your new password.' %}</p>
         {% include 'registration/login_form.html' %}
     </div>
 </div>
