--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -1,11 +1,12 @@
 {% extends "base_layout.html" %}
+{% load i18n %}
 {% block title %}{{ block.super }}Password Reset Sent{% endblock title %}
 
 {% block content %}
 <div>
     <div class="row">
-        <p>Password Reset email sent.</p>
-        <p>Please check your email and password</p>
+        <p>{% trans 'Password Reset email sent.' %}</p>
+        <p>{% trans 'Please check your email and password' %}</p>
     </div>
 </div>
 {% endblock content %}
