--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -1,16 +1,17 @@
 {% extends "base_layout.html" %}
+{% load i18n %}
 {% block title %}{{ block.super }} Reset your Password{% endblock title %}
 
 {% block content %}
 <div>
     <div class="row">
-        <p>Receive Password reset Email.</p>
+        <p>{% trans 'Receive Password reset Email.' %}</p>
     </div>
     <form action="{% url 'password_reset' %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
 
-        <button type="submit">Reset Password</button>
+        <button type="submit">{% trans 'Reset Password' %}</button>
     </form>
 </div>
 {% endblock content %}
