--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_trading.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_trading.html
@@ -1,4 +1,5 @@
 {% extends 'base_layout.html' %}
+{% load i18n %}
 {% load static %}
 {% block title %} Bitcoin Trading {% endblock %}
 {% block content %}
@@ -10,8 +11,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>Bitcoin Trading</h2>
-							<p>Trade cryptocurrency with ease</p>
+							<h2>{% trans 'Bitcoin Trading' %}</h2>
+							<p>{% trans 'Trade cryptocurrency with ease' %}</p>
 						</div>
 					</div>
 				</div>
@@ -23,8 +24,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="{%url 'index' %}">Home</a></li>
-							<li class="breadcrumb-item active">Bitcoin Trading</li>
+							<li class="breadcrumb-item"><a href="{%url 'index' %}">{% trans 'Home' %}</a></li>
+							<li class="breadcrumb-item active">{% trans 'Bitcoin Trading' %}</li>
 						</ol>
 					</div>
 				</div>
@@ -40,19 +41,19 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12 col-12 mb-lg-0 mb-md-0 mb-5 pr-lg-5 pr-md-5 pr-sm-2 pr-2">
 					<div class="widget cat_wid mb-5">
-						<h3 class="widget-title">Service List</h3>
+						<h3 class="widget-title">{% trans 'Service List' %}</h3>
 						<!-- end widget tittle-->
 						<div class="widget-inner mt-5">
 							<div class="category-menu">
 								<ul>
-									<li><a href="{% url 'bitcoin_ethereum' %}">Bitcoin & Ethereum <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'crypto_trading' %}">Cryptocurrency Trading <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="#" class="active">Bitcoin Trading <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'coin_buy' %}">Coin Buy & Sell <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'security_ensure' %}">Account Security <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="{% url 'bitcoin_legality' %}">Bitcoin Legality <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="#">Trading Strategy <i class="float-right icofont icofont-thin-right"></i></a></li>
-									<li><a href="#">Money Exchange <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'bitcoin_ethereum' %}">{% trans "Bitcoin & Ethereum" %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'crypto_trading' %}">{% trans "Cryptocurrency Trading" %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="#" class="active">{% trans 'Bitcoin Trading' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'coin_buy' %}">{% trans 'Coin Buy & Sell' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'security_ensure' %}">{% trans 'Account Security' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="{% url 'bitcoin_legality' %}">{% trans 'Bitcoin Legality' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="#">{% trans 'Trading Strategy' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
+									<li><a href="#">{% trans 'Money Exchange' %} <i class="float-right icofont icofont-thin-right"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -116,17 +117,17 @@
 					<!-- end image tab -->
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
-							<h4>Bitcoin Overview</h4>
-							<p>Bitcoin is typically viewed as a “reserve asset” or store of value in the cryptocurrency space. As a result, it has the highest adoption, best liquidity, highest average trading volume, and remains the top crypto by market capitalization. In fact, some people believe that there isn’t even a need for any cryptocurrencies other than Bitcoin. Their argument is that Bitcoin could cater to all use cases that altcoins are attempting to.</p>
+							<h4>{% trans 'Bitcoin Overview' %}</h4>
+							<p>{% trans "Bitcoin is typically viewed as a 'reserve asset' or store of value in the cryptocurrency space. As a result, it has the highest adoption, best liquidity, highest average trading volume, and remains the top crypto by market capitalization. In fact, some people believe that there isn’t even a need for any cryptocurrencies other than Bitcoin. Their argument is that Bitcoin could cater to all use cases that altcoins are attempting to." %}</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Base Layer -</strong> Bringing Bitcoin to this composable layer of financial building blocks is considered to be an exciting prospect by many.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Smart Contracts -</strong>While the most amount of value is in Bitcoin, it can’t benefit that much from the innovation happening in other segments of the digital currency industry</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Open Source -</strong>  It means that since all these applications are running on the same public.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Circulating Supply -</strong> Even so, the competition between these different solutions isn’t that straightforward – it’s not a zero-sum game.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Base Layer' %} -</strong> {% trans "Bringing Bitcoin to this composable layer of financial building blocks is considered to be an exciting prospect by many." %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Smart Contracts' %} -</strong>{% trans "While the most amount of value is in Bitcoin, it can’t benefit that much from the innovation happening in other segments of the digital currency industry" %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Open Source' %} -</strong>  {% trans "It means that since all these applications are running on the same public." %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Circulating Supply' %} -</strong> {% trans "Even so, the competition between these different solutions isn’t that straightforward – it’s not a zero-sum game." %}</li>
 								</ul>
 							</div>
 							<!-- end col -->
@@ -157,16 +158,16 @@
 						<div class="row">
 							<div class="col-12">
 								<ul class="nav nav-tabs" role="tablist">
-									<li class="nav-item"><a class="nav-link active" href="#" data-target="#srone" data-toggle="tab">Description</a></li>
-									<li class="nav-item"><a class="nav-link" href="#" data-target="#srtwo" data-toggle="tab">Experinece</a></li>
-									<li class="nav-item"><a class="nav-link" href="#" data-target="#srthree" data-toggle="tab">Values</a></li>
+									<li class="nav-item"><a class="nav-link active" href="#" data-target="#srone" data-toggle="tab">{% trans 'Description' %}</a></li>
+									<li class="nav-item"><a class="nav-link" href="#" data-target="#srtwo" data-toggle="tab">{% trans 'Experience' %}</a></li>
+									<li class="nav-item"><a class="nav-link" href="#" data-target="#srthree" data-toggle="tab">{% trans 'Values' %}</a></li>
 								</ul>
 								<!-- Tab panes -->
 								<div class="tab-content">
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>Bitcoin is typically viewed as a “reserve asset” or store of value in the cryptocurrency space. As a result, it has the highest adoption, best liquidity, highest average trading volume, and remains the top crypto by market capitalization. In fact, some people believe that there isn’t even a need for any cryptocurrencies other than Bitcoin. Their argument is that Bitcoin could cater to all use cases that altcoins are attempting to.</p>										
+												<p>{% trans "Bitcoin is typically viewed as a 'reserve asset' or store of value in the cryptocurrency space. As a result, it has the highest adoption, best liquidity, highest average trading volume, and remains the top crypto by market capitalization. In fact, some people believe that there isn’t even a need for any cryptocurrencies other than Bitcoin. Their argument is that Bitcoin could cater to all use cases that altcoins are attempting to." %}</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
@@ -179,15 +180,15 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>Bitcoin is the backbone of the cryptocurrency market, and yet, it can’t take advantage of developments that happen in other parts of the ecosystem. Some projects have been working on solving this problem.Is there a way to use bitcoin for more than what it can do while keeping the Bitcoin network intact? Well, the growth of tokenized bitcoin on Ethereum suggests that there is a demand for it. </p>										
+												<p>{% trans "Bitcoin is the backbone of the cryptocurrency market, and yet, it can’t take advantage of developments that happen in other parts of the ecosystem. Some projects have been working on solving this problem.Is there a way to use bitcoin for more than what it can do while keeping the Bitcoin network intact? Well, the growth of tokenized bitcoin on Ethereum suggests that there is a demand for it." %} </p>										
 											</div>
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">FonixCoin makes it simple and safe to buy, sell, and hold BTC.</p>
+										<p class="mb-3">{% trans "FonixCoin makes it simple and safe to buy, sell, and hold BTC." %}</p>
 										<ul>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Convert -</strong>Want to own other crypto? Convert any portion of your Bitcoin balance to another crypto.</li>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Transfer -</strong> Unlike sending money overseas, you can send Bitcoin to anyone in the world virtually instantly.</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Convert' %} -</strong>{% trans "Want to own other crypto? Convert any portion of your Bitcoin balance to another crypto." %}</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Transfer' %} -</strong> {% trans "Unlike sending money overseas, you can send Bitcoin to anyone in the world virtually instantly." %}</li>
 										</ul>
 									 </div>
 								</div>
