--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -104,7 +104,7 @@
 								<li><a href="#"><i class="icofont icofont-live-support"></i>{% trans "Support" %} </a></li>
 								<details>
 									
-									<summary><li><a><i class="icofont icofont-earth"></i></a></li> language</summary>
+									<summary><li><a><i class="icofont icofont-earth"></i></a></li> {% trans 'language' %}</summary>
 									<ul class="nav navbar-nav navbar-right language menu">
 										{% get_current_language as LANGUAGE_CODE %}
 										{% get_available_languages as LANGUAGES %}
@@ -235,13 +235,12 @@
                                 </div>
 								<div class="footer-logo-text">
                                     <h3>FonixCoin</h3>
-                                    <p>Bitcoin Trading Center</p>
+                                    <p>{% trans 'Bitcoin Trading Center' %}</p>
                                 </div>
 							</a>
                         </div>
                         <div class="about mb-2">
-                            <p>Our mission is to bring trading to the masses. We provide an intuitive trading platform designed with the latest technological advancements that’s geared towards new traders as well as professionals. Our customer service and support is always available to meet your needs, and our account managers know that your success is our success.
-							</p>
+                            <p>{% trans 'Our mission is to bring trading to the masses. We provide an intuitive trading platform designed with the latest technological advancements that’s geared towards new traders as well as professionals. Our customer service and support is always available to meet your needs, and our account managers know that your success is our success.' %}</p>
                         </div>
                         <div class="footer-news">
 							<form action="#">
@@ -257,15 +256,15 @@
                     <!-- End Widget -->
                     <div class="col-lg-3 col-md-6 col-sm-12 col-12 mb-lg-0 mb-md-5 mb-5 footer-widget">
                         <div class="footer-section-title col-12 no-padding">
-                            <h3>Quick Links</h3>
+                            <h3>{% trans 'Quick Links' %}</h3>
                         </div>
                         <!-- END SECTION TITLE -->
 						<div class="col-12 footer-widget-inner">
 							<ul class="quick-link-list">
-								<li><a href="{% url 'index' %}"><i class="fa fa-chevron-circle-right"></i> Home Page</a></li>
-								<li><a href="{% url 'about-us' %}"><i class="fa fa-chevron-circle-right"></i> Our Members</a></li>
-								<li><a href="{% url 'coin_buy' %}"><i class="fa fa-chevron-circle-right"></i> Buy & Sell</a></li>
-								<li><a href="{% url 'crypto_trading' %}"><i class="fa fa-chevron-circle-right"></i> Bitcoin Trade</a></li>
+								<li><a href="{% url 'index' %}"><i class="fa fa-chevron-circle-right"></i>{% trans 'Home Page' %}</a></li>
+								<li><a href="{% url 'about-us' %}"><i class="fa fa-chevron-circle-right"></i>{% trans 'Our Members' %}</a></li>
+								<li><a href="{% url 'coin_buy' %}"><i class="fa fa-chevron-circle-right"></i>{% trans 'Buy & Sell' %}</a></li>
+								<li><a href="{% url 'crypto_trading' %}"><i class="fa fa-chevron-circle-right"></i>{% trans 'Bitcoin Trade' %}</a></li>
 								
 							</ul>
 						</div>	
@@ -273,7 +272,7 @@
                     <!-- End Widget -->
                     <div class="col-lg-3 col-md-6 col-sm-12 col-12 mb-lg-0 mb-md-0 mb-5 footer-widget">
                         <div class="footer-section-title col-12 no-padding">
-                            <h3>latest Post</h3>
+                            <h3>{% trans 'latest Post' %}</h3>
                         </div>
                         <!-- END SECTION TITLE -->
 						<div class="col-12 footer-widget-inner recentPost">
@@ -321,7 +320,7 @@
 									<i class="icofont icofont-mobile-phone"></i>
 								</div>
 								<div class="single-fcontact-des">
-									<h6>Phone Number:</h6>
+									<h6>{% trans 'Phone Number' %}:</h6>
 									<p>+1-470-673-1900</p>
 								</div>
 							</div>
@@ -330,7 +329,7 @@
 									<i class="icofont icofont-eye-alt"></i>
 								</div>
 								<div class="single-fcontact-des">
-									<h6>Door Open:</h6>
+									<h6>{% trans 'Door Open' %}:</h6>
 									<p>Mon - Sun : 09:00 - 18:00</p>
 								</div>
 							</div>
@@ -349,20 +348,6 @@
             </div>
         </div>
 		
-        <!--Footer Bottom -->
-        <!-- <div class="copyright">
-            <div class="auto-container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-12 mb-lg-0 mb-md-0 mb-4 footer-menu text-center text-lg-left text-md-left">
-                        <ul>
-                            <li><a href="{% url 'profile' %}">Company Profile</a> </li>
-                            <li><a href="{% url 'terms_and_condition' %}">Terms & Condition</a> </li>
-                            <li><a href="{% url 'refund_policy' %}">Refund Policy</a> </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 		
     </footer>
     <!-- END FOOTER -->
