--- a/transactions/templates/transactions/bank_details.html
+++ b/transactions/templates/transactions/bank_details.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -10,8 +11,8 @@
         Payment Details
       </h1>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
         <li class="breadcrumb-item active"></li>
       </ol>
     </section>
@@ -22,14 +23,14 @@
      <!-- Basic Forms -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Deposit Fund</h3>
-          <h6 class="box-subtitle">Please make a payemnt using this details</h6>
+          <h3 class="box-title">{% trans 'Deposit Fund' %}</h3>
+          <h6 class="box-subtitle">{% trans 'Please make a payemnt using this details' %}</h6>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
           <div class="row">
             <div class="col">
-              <h3>Bank Name:</h3>
+              <h3>{% trans 'Bank Name' %}:</h3>
             </div>
             <div class="col-8 align-left">
               <h3>{{ details.bank_name }}</h3>
@@ -38,7 +39,7 @@
           </div>
           <div class="row">
             <div class="col">
-              <h3>Bank Account:</h3>
+              <h3>{% trans 'Bank Account' %}:</h3>
             </div>
             <div class="col-8 align-left">
               <h3>{{ details.account_number }}</h3>
@@ -48,7 +49,7 @@
           <!-- /.row -->
           <div class="row">
             <div class="col">
-              <h3>Routing Number:</h3>
+              <h3>{% trans 'Routing Number' %}:</h3>
             </div>
             <div class="col-8 align-left">
               <h3>{{ details.routing_number }}</h3>
