--- a/transactions/templates/transactions/bitcoin_details.html
+++ b/transactions/templates/transactions/bitcoin_details.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -7,11 +8,11 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Payment Details
+        {% trans 'Payment Details' %}
       </h1>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
         <li class="breadcrumb-item active"></li>
       </ol>
     </section>
@@ -22,14 +23,14 @@
      <!-- Basic Forms -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Deposit Fund</h3>
-          <h6 class="box-subtitle">Please make a payemnt using this details</h6>
+          <h3 class="box-title">{% trans 'Deposit Fund' %}</h3>
+          <h6 class="box-subtitle">{% trans 'Please make a payemnt using this details' %}</h6>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <h3>Wallet Address</h3>
+                    <h3>{% trans 'Wallet Address' %}</h3>
                 </div>
                 <!-- /.col -->
             </div>
@@ -38,6 +39,10 @@
 
                     <p class="text-break">{{ details.btc_address }}</p>
                 </div>
+                <div class="col d-flex justify-content-center">
+
+                  <p class="text-break" style="color: red;">{% trans 'Please recheck and confirm this wallet address to avoid deposit error' %}</p>
+              </div>
             </div>
             <!-- /.row -->
         </div>
