--- a/transactions/templates/transactions/deposit_form.html
+++ b/transactions/templates/transactions/deposit_form.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -7,11 +8,11 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Deposit Funds
+        {% trans 'Deposit Funds' %}
       </h1>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
         <li class="breadcrumb-item active"></li>
       </ol>
     </section>
@@ -22,8 +23,8 @@
      <!-- Basic Forms -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Deposit Fund</h3>
-          <h6 class="box-subtitle">Please select required options</h6>
+          <h3 class="box-title">{% trans 'Deposit Fund' %}</h3>
+          <h6 class="box-subtitle">{% trans 'Please select required options' %}</h6>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
@@ -32,17 +33,17 @@
             	<form action="" method="POST">
 					{% csrf_token %}
 					<div class="form-group">
-						<h5>Fullname <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Fullname' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							<input type="text" name="text" class="form-control" required data-validation-required-message="This field is required" readonly value="{{ user.get_full_name }}"> </div>
 					</div>
 					<div class="form-group">
-						<h5>Email<span class="text-danger">*</span></h5>
+						<h5>{% trans 'Email' %}<span class="text-danger">*</span></h5>
 						<div class="controls">
 							<input type="email" name="email" class="form-control" required data-validation-required-message="This field is required" readonly value="{{ user.email }}"> </div>
 					</div>
 					<div class="form-group">
-						<h5>Select Amount <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Select Amount' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.amount }}
 						</div>
@@ -57,7 +58,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
-								<h5>Select payment method <span class="text-danger">*</span></h5>
+								<h5>{% trans 'Select payment method' %} <span class="text-danger">*</span></h5>
 								{% for radio in form.payment_option %}
 								<fieldset class="controls">
 									{{ radio.tag }}
@@ -75,7 +76,7 @@
 						</div>
 					</div>
 					<div class="text-xs-right">
-						<button type="submit" class="btn btn-info">Deposit Fund</button>
+						<button type="submit" class="btn btn-info">{% trans 'Deposit Fund' %}</button>
 					</div>
 				</form>
             	
