--- a/users/templates/registration/edit_user.html
+++ b/users/templates/registration/edit_user.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -10,8 +11,8 @@
         Update Profile
       </h1>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
         <li class="breadcrumb-item active"></li>
       </ol>
     </section>
@@ -22,8 +23,8 @@
      <!-- Basic Forms -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Update Your Profile</h3>
-          <h6 class="box-subtitle">Please make neccessary edits</h6>
+          <h3 class="box-title">{% trans 'Update Your Profile' %}</h3>
+          <h6 class="box-subtitle">{% trans 'Please make neccessary edits' %}</h6>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
@@ -32,7 +33,7 @@
             	<form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
-						<h5>First Name <span class="text-danger">*</span></h5>
+						<h5>{% trans 'First Name' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.first_name }}
 						</div>
@@ -45,7 +46,7 @@
 						{% endif %}
                     </div>
                     <div class="form-group">
-						<h5>Last Name <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Last Name' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.last_name }}
 						</div>
@@ -58,7 +59,7 @@
 						{% endif %}
                     </div>
                     <div class="form-group">
-						<h5>Email <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Email' <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.email }}
 						</div>
@@ -71,7 +72,7 @@
 						{% endif %}
                     </div>
                     <div class="form-group">
-						<h5>Gender <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Gender' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.gender }}
 						</div>
@@ -84,7 +85,7 @@
 						{% endif %}
                     </div>
                     <div class="form-group">
-						<h5>Profile Picture <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Profile Picture' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.picture }}
 						</div>
@@ -97,7 +98,7 @@
 						{% endif %}
 					</div>
 					<div class="text-xs-right">
-						<button type="submit" class="btn btn-info">Update Profile</button>
+						<button type="submit" class="btn btn-info">{% trans 'Update Profile' %}</button>
 					</div>
 				</form>
             	
