--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends "base_layout.html" %}
+{% load i18n %}
 {% load static %}
 {% block title %}{{ block.super }} - Login{% endblock title %}
 
@@ -10,8 +11,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>Login</h2>
-							<p>Login To Your Account</p>
+							<h2>{% trans 'Login' %}</h2>
+							<p>{% trans 'Login To Your Account' %}</p>
 						</div>
 					</div>
 				</div>
@@ -23,8 +24,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-							<li class="breadcrumb-item active">Login</li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">{% trans 'Home' %}</a></li>
+							<li class="breadcrumb-item active">{% trans 'Login' %}</li>
 						</ol>
 					</div>
 				</div>
