--- a/users/templates/registration/password_change.html
+++ b/users/templates/registration/password_change.html
@@ -1,4 +1,5 @@
 {% extends 'base_dash.html' %}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
@@ -10,8 +11,8 @@
         Password
       </h1>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">{% trans 'Dashboard' %}</a></li>
         <li class="breadcrumb-item active"></li>
       </ol>
     </section>
@@ -22,8 +23,8 @@
      <!-- Basic Forms -->
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Change Password</h3>
-          <h6 class="box-subtitle">Please input your new Password</h6>
+          <h3 class="box-title">{% trans 'Change Password' %}</h3>
+          <h6 class="box-subtitle">{% trans 'Please input your new Password' %}</h6>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
@@ -33,7 +34,7 @@
             	<form id="my-form" action="" method="POST">
 					{% csrf_token %}
 					<div class="form-group">
-						<h5>Old Password <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Old Password' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.old_password }}
 						</div>
@@ -46,7 +47,7 @@
 						{% endif %}
 					</div>
 					<div class="form-group">
-						<h5>New Password <span class="text-danger">*</span></h5>
+						<h5>{% trans 'New Password' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.new_password1 }}
 						</div>
@@ -59,7 +60,7 @@
 						{% endif %}
 					</div>
 					<div class="form-group">
-						<h5>Confirm New Password <span class="text-danger">*</span></h5>
+						<h5>{% trans 'Confirm New Password' %} <span class="text-danger">*</span></h5>
 						<div class="controls">
 							{{ form.new_password2 }}
 						</div>
@@ -72,7 +73,7 @@
 						{% endif %}
 					</div>
 					<div class="text-xs-right">
-						<button type="submit" class="btn btn-info">Change Password</button>
+						<button type="submit" class="btn btn-info">{% trans 'Change Password' %}</button>
 					</div>
 				</form>
             	
