--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -1,21 +1,22 @@
 {% extends "base_layout.html" %}
+{% load i18n %}
 {% block title %}{{ block.super }} Reset your Password{% endblock title %}
 
 {% block content %}
 <div>
     {% if validlink %}
     <div class="row">
-        <p>Enter A new Password below</p>
+        <p>{% trans 'Enter A new Password below' %}</p>
     </div>
     <form action="{{ request.path }}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
 
-        <button type="submit">Save new Password</button>
+        <button type="submit">{% trans 'Save new Password' %}</button>
     </form>
     {% else%}
-    <p>This reset link is no longer valid</p>
-    <p>Please request a new reset email <a href="{% url 'password_reset' %}">here.</a></p>
+    <p>{% trans 'This reset link is no longer valid' %}</p>
+    <p>{% trans 'Please request a new reset email' %} <a href="{% url 'password_reset' %}">{% trans 'here.' %}</a></p>
     {% endif %}
 </div>
 {% endblock content %}
