--- a/users/templates/registration/user_activate_failed.html
+++ b/users/templates/registration/user_activate_failed.html
@@ -1,4 +1,5 @@
 {% extends "base_layout.html" %}
+{% load i18n %}
 {% load static %}
 {% block title %}{{ block.super }} - Activate{% endblock title %}
 
@@ -10,8 +11,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>Create Your Account</h2>
-							<p>Confirmation Email Sent</p>
+							<h2>{% trans 'Create Your Account' %}</h2>
+							<p>{% trans 'Confirmation Email Sent' %}</p>
 						</div>
 					</div>
 				</div>
@@ -23,8 +24,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-							<li class="breadcrumb-item active">registration</li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">{% trans 'Home' %}</a></li>
+							<li class="breadcrumb-item active">{% trans 'registration' %}</li>
 						</ol>
 					</div>
 				</div>
@@ -40,8 +41,8 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>Your Fonixcoin account activation failed</p></br>
-                    <p>Activation link not valid or expired, please restart your registration.</p>
+                    <p>{% trans 'Your Fonixcoin account activation failed' %}</p></br>
+                    <p>{% trans 'Activation link not valid or expired, please restart your registration.' %}</p>
                 </div>
 			</div>
 			<!-- end row -->
